--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <div id="map"></div>
   
   <!-- Our JS -->
-  <script type="text/javascript" src="logic4.js"></script>
+  <script type="text/javascript" src="logic.js"></script>
 </body>
 </html>
